--- a/include/gui.ui
+++ b/include/gui.ui
@@ -52,7 +52,7 @@
      <rect>
       <x>20</x>
       <y>390</y>
-      <width>101</width>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -78,12 +78,12 @@
      <rect>
       <x>20</x>
       <y>485</y>
-      <width>101</width>
+      <width>111</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Magnetic FIeld</string>
+     <string>Magnetic Field</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="Acc_Z">
