--- a/include/gui.ui
+++ b/include/gui.ui
@@ -14,21 +14,11 @@
    <string>IMU QT</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QOpenGLWidget" name="openGLWidget">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>461</width>
-      <height>231</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPlainTextEdit" name="Acc_X">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>330</y>
+      <x>210</x>
+      <y>90</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -37,8 +27,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>340</y>
+      <x>50</x>
+      <y>100</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -50,8 +40,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>390</y>
+      <x>50</x>
+      <y>150</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -63,8 +53,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>440</y>
+      <x>50</x>
+      <y>200</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -76,8 +66,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>485</y>
+      <x>50</x>
+      <y>245</y>
       <width>111</width>
       <height>21</height>
      </rect>
@@ -89,8 +79,8 @@
    <widget class="QPlainTextEdit" name="Acc_Z">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>330</y>
+      <x>430</x>
+      <y>90</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -99,8 +89,8 @@
    <widget class="QPlainTextEdit" name="Acc_Y">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>330</y>
+      <x>320</x>
+      <y>90</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -109,8 +99,8 @@
    <widget class="QPlainTextEdit" name="Omega_Z">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>380</y>
+      <x>430</x>
+      <y>140</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -119,8 +109,8 @@
    <widget class="QPlainTextEdit" name="Omega_X">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>380</y>
+      <x>210</x>
+      <y>140</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -129,8 +119,8 @@
    <widget class="QPlainTextEdit" name="Omega_Y">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>380</y>
+      <x>320</x>
+      <y>140</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -139,8 +129,8 @@
    <widget class="QPlainTextEdit" name="Angle_Z">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>430</y>
+      <x>430</x>
+      <y>190</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -149,8 +139,8 @@
    <widget class="QPlainTextEdit" name="Angle_X">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>430</y>
+      <x>210</x>
+      <y>190</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -159,8 +149,8 @@
    <widget class="QPlainTextEdit" name="Angle_Y">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>430</y>
+      <x>320</x>
+      <y>190</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -169,8 +159,8 @@
    <widget class="QPlainTextEdit" name="Mag_Z">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>480</y>
+      <x>430</x>
+      <y>240</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -179,8 +169,8 @@
    <widget class="QPlainTextEdit" name="Mag_X">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>480</y>
+      <x>210</x>
+      <y>240</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -189,8 +179,8 @@
    <widget class="QPlainTextEdit" name="Mag_Y">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>480</y>
+      <x>320</x>
+      <y>240</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -199,8 +189,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>300</y>
+      <x>240</x>
+      <y>60</y>
       <width>49</width>
       <height>16</height>
      </rect>
@@ -212,8 +202,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>300</y>
+      <x>350</x>
+      <y>60</y>
       <width>49</width>
       <height>16</height>
      </rect>
@@ -225,8 +215,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>300</y>
+      <x>460</x>
+      <y>60</y>
       <width>49</width>
       <height>16</height>
      </rect>
@@ -238,31 +228,31 @@
    <widget class="QPlainTextEdit" name="statusText">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>100</x>
       <y>330</y>
-      <width>241</width>
-      <height>171</height>
+      <width>561</width>
+      <height>161</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>380</x>
       <y>300</y>
       <width>61</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Status</string>
+     <string>Logs</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>30</y>
+      <x>390</x>
+      <y>10</y>
       <width>49</width>
       <height>16</height>
      </rect>
